# BCIpyDummies

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml
bcipydummies/: __init__.py  __main__.py  cli.py  emotiv_controller.py  engine.py  publishers.py  sources.py
bcipydummies/cli/: __init__.py  main.py
bcipydummies/cli/commands/: __init__.py  base.py  list_headsets.py  list_windows.py  run.py
bcipydummies/control/: __init__.py  action_mapper.py  window_control.py
bcipydummies/core/: __init__.py  config.py  emotiv_controller.py  engine.py  events.py  exceptions.py  factory.py
bcipydummies/cortex/: __init__.py  session_manager.py  websocket_client.py
bcipydummies/processors/: __init__.py  base.py  debounce.py  mapper.py  threshold.py
bcipydummies/publishers/: __init__.py  base.py  console.py
bcipydummies/publishers/keyboard/: __init__.py  base.py  windows.py
bcipydummies/sources/: __init__.py  base.py  mock.py
bcipydummies/sources/emotiv/: __init__.py  cortex_client.py  source.py
core/: emotiv_controller.py
cortex/: __init__.py
docs/: index.md
docs/api/: emotiv-controller.md
docs/architecture/: ARQUITECTURA_COMPLETA.md  system-design.md
docs/contributing/: index.md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/hardware/: emotiv-setup.md
tests/: test_action_mapper.py  test_core.py  test_emotiv_controller.py  test_engine.py  test_processors.py  test_publishers.py  test_session_manager.py  test_sources.py  test_websocket_client.py  test_window_control.py
